--- a/client/templates/persons/persons_list.html
+++ b/client/templates/persons/persons_list.html
@@ -1,5 +1,5 @@
 <template name="personsList">
-  <div class="persons page">
+  <div class="persons">
     {{#each persons}}
       {{> personItem}}
     {{/each}}
