--- a/client/templates/persons/person_item.html
+++ b/client/templates/persons/person_item.html
@@ -1,8 +1,8 @@
 <template name="personItem">
   <div class="person">
     <div class="person-content">
-      <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
+      <h3><a href="{{url}}">{{name}}</a><span>{{title}}</span> <span>{{facebook}}</span></h3>
     </div>
-    <a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
+    <a href = "{{pathFor 'personPage'}}" class="discuss btn btn-default">Discuss</a>
   </div>
 </template>
