--- a/client/templates/persons/person_item.html
+++ b/client/templates/persons/person_item.html
@@ -1,7 +1,7 @@
 <template name="personItem">
   <div class="person">
     <div class="person-content">
-      <h3><a href="{{url}}">{{name}}</a><span>{{title}}</span> <span>{{facebook}}</span></h3>
+      <h3><a href="{{url}}">{{name}}</a><span>{{title}}</span> <span>{{url}}</span></h3>
     </div>
     <a href = "{{pathFor 'personPage'}}" class="discuss btn btn-default">Discuss</a>
   </div>
