--- a/client/templates/persons/person_submit.html
+++ b/client/templates/persons/person_submit.html
@@ -7,9 +7,27 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label" for="title">Title</label>
+      <label class="control-label" for="phone">Phone</label>
       <div class="controls">
-          <input name="title" id="title" type="text" value="" placeholder="Name your post" class="form-control"/>
+          <input name="phone" id="phone" type="text" value="" placeholder="Your Phone number" class="form-control"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label" for="engname">EngName</label>
+      <div class="controls">
+          <input name="engname" id="engname" type="text" value="" placeholder="Your name in English" class="form-control"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label" for="viname">ViName</label>
+      <div class="controls">
+          <input name="viname" id="viname" type="text" value="" placeholder="Your name in VN" class="form-control"/>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label" for="email">Email</label>
+      <div class="controls">
+          <input name="email" id="email" type="text" value="" placeholder="Your Email" class="form-control"/>
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary"/>
