add 5 fields submit

--- a/client/templates/persons/persons_page.html
+++ b/client/templates/persons/persons_page.html
@@ -1,5 +1,8 @@
 <template name="personPage">
   <div class="person-page page">
-    {{> personItem}}
+    <h1>{{viname}}</h1>
+    <p>EngName: {{engname}}</p>
+    <p>Phone:  {{phone}}</p>
+    <p>Emal: {{email}}</p>
   </div>
 </template>
